--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@
 #       Choose the win32 build.
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
-  adapter: postgresql
+  adapter: mysql2
   encoding: unicode
   database: rforum
   pool: 5
@@ -35,7 +35,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: postgresql
+  adapter: mysql2
   encoding: unicode
   database: rforum_t
   pool: 5
@@ -43,7 +43,7 @@ test: &test
   password: rforum_t
 
 production:
-  adapter: postgresql
+  adapter: mysql2
   encoding: unicode
   database: rforum_production
   pool: 5
